src/assets/css/custom.css
.logo .astronaut {
  display: flex;
  justify-content: center;
  align-content: center;
  width: 100%;
  height: 100%;
}
.logo .astronaut img {
  align-self: center;
  justify-self: center;
  display: flex;
  width: 50%;
  height: auto;
}

#particle-canvas {
  position: absolute !important;
  width: 100%;
  height: 100vh;
  top: 0;
  z-index: 2;
}

#main {
  width: 100%;
}

#main .blog {
  width: 80%;
}
#main .blog article {
  width: 100%;
}

#main article .close:before {
  background-image: url(../images/close.png);
}

#main article {
  padding: 2rem 2.5rem 2rem 2.5rem;
  margin: 0 auto;
  transition: all 2s;
}

.image.main {
  display: block;
  margin: 2.5rem 0;
  width: auto;
  height: 100%;
  overflow: hidden;
}

.image.main img {
  height: auto;
  transform: rotateZ(0.7deg);
}

.particles-wrapper {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100vh;
  z-index: 2;
}
.particles {
  opacity: 0.6;
}

.articleWrapper {
  width: 100%;
  height: 500px !important;
  overflow-y: scroll;
}

.blog {
  height: 500px !important;
  overflow-y: scroll;
}

